# multibreak

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/multibreak/: __init__.py  multibreak.py
