[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multibreak"
version = "0.0.2"
description = "A Python module to break out of multiple nested loops using break(n)."
authors = [
    { name = "mrwe3838", email = "mrwe3838@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["python", "loops", "break", "nested loops"]
